--- a/configuration.properties
+++ b/configuration.properties
@@ -8,3 +8,4 @@ qdGecerliPassword= 31488081
 
 qdGecersizUsername= mehmet@abc.com
 qdGecersizPassword= 123456
+tripadvisorUrl=https://www.tripadvisor.com.tr/
